# modular

./: Cargo.toml  README.md
audio_host/: Cargo.toml
audio_host/src/: lib.rs
eurorack/: Cargo.toml
eurorack/src/: lib.rs  utils.rs
filters/: Cargo.toml
filters/src/: lib.rs
gui/: Cargo.toml
gui/examples/: test_panel.rs
gui/src/: connections.rs  fonts.rs  jack.rs  knob.rs  lib.rs  panels.rs  patch.rs
main/: Cargo.toml
main/examples/: midi_test.rs  sequencer_test.rs
main/src/: main.rs
module/: Cargo.toml
module-derive/: Cargo.toml
module-derive/src/: lib.rs
module/src/: lib.rs  parameters.rs  registry.rs
modules/: Cargo.toml
modules/src/: amplifier.rs  clock.rs  envelope.rs  filters.rs  lfo.rs  lib.rs  midi.rs  oscillators.rs  sequencer.rs
oscillators/: Cargo.toml
oscillators/src/: lfo.rs  lib.rs  vco.rs
patches/: hannah.json  midi_test.json
rack/: Cargo.toml
rack/src/: lib.rs  utils.rs  voltage.rs
sequencer/: Cargo.toml
sequencer/src/: lib.rs
utility_modules/: Cargo.toml
utility_modules/src/: amplifier.rs  clock.rs  envelope.rs  lib.rs  midi.rs
widgets/: Cargo.toml
widgets/src/: icons.rs  jack.rs  knob.rs  lib.rs  signal.rs
