[package]
name = "gui"
version = "0.1.0"
edition = "2021"

[dependencies]
audio_host = { path = "../audio_host/" }
portable-atomic = { version = "0.2.1", features = ["float"] }
eframe = "0.17.0"
module = { path = "../module/" }
modules = { path = "../modules/" }
rack = { path = "../rack/" }
widgets = { path = "../widgets/" }
