[package]
name = "gui"
version = "0.1.0"
edition = "2021"

[dependencies]
audio_host = { path = "../audio_host/" }
portable-atomic = { version = "0.2.1", features = ["float"] }
eframe = "0.17.0"
module = { path = "../module/" }
modules = { path = "../modules/" }
native-dialog = "0.6.4"
rack = { path = "../rack/" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
widgets = { path = "../widgets/" }
