[package]
name = "oxcable_modular_main"
version = "0.1.0"
edition = "2021"

[dependencies]
audio_host = { path = "../audio_host/" }
anyhow = "1.0"
filters = { path = "../filters/" }
oscillators = { path = "../oscillators/" }
rack = { path = "../rack/" }
sequencer = { path = "../sequencer/" }
utility_modules = { path = "../utility_modules/" }
