[package]
name = "module"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.17.0"
eurorack = { path = "../eurorack/" }
module-derive = { path = "../module-derive/" }
portable-atomic = { version = "0.2.1", features = ["float"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.56"
